@@ -131,6 +131,4 @@
 
 - Make a SQUFOF that uses native 64-bit to handle 126-bit inputs.
 
-- Add:
-   numtoperm
-   hammingweight
+- Add:  hammingweight
